# email_reminders

./: .config.sample.json  .gitignore  Dockerfile  crontab  pyproject.toml
src/: config.py  consts.py  main.py  reminder.py  sender.py
src/tests/: reminder_cases.py  test_reminder.py
